--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <p class="card-text">Om een onderscheidt tussen deze vele verschillende type apps, bestanden en kaarten te kunnen maken is er gekozen om met gestandaardiseerde thumbnails te gaan werken.</p>
           </div>
           <div class="card-footer">
-            <a href="http://nlamsws004.sweco.se/websites/gdpthumbnails/" class="btn btn-primary">Ga naar App</a>
+            <a href="http://nlamsws004.sweco.se/app/gdpthumbnails/" class="btn btn-primary">Ga naar App</a>
           </div>
         </div>
       </div>
