--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
           </div>
         </div>
       </div>
-      <div class="col-12 col-md-6 col-lg-4 mt-5">
+<!--       <div class="col-12 col-md-6 col-lg-4 mt-5">
         <div class="card">
           <figure>
             <img src="./img/kaartviewer.png" alt="" class="img-fluid">
@@ -199,7 +199,7 @@
             <a href="https://map.swecoportal.nl/menu/index.html" class="btn btn-primary">Ga naar website</a>
           </div>
         </div>
-      </div>
+      </div> -->
       <!-- <div class="col-12 col-md-6 col-lg-3 mt-5">
         <div class="card">
           <figure>
