--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <p class="card-text">Op dit portaal worden de verschillende FME tools intern gepubliceerd een onderscheid gemaakt tussen verschillende teams binnen Sweco.</p>
           </div>
           <div class="card-footer">
-            <a href="http://nlamsas142/fmeserver/apps/FMESwecoNLAlgemeen" class="btn btn-primary">Ga naar portaal</a>
+            <a href="https://nlamsas142.sweco.se/fmeserver/apps/FMESwecoNLAlgemeen" class="btn btn-primary">Ga naar portaal</a>
           </div>
         </div>
       </div>
